--- a/web.config
+++ b/web.config
@@ -14,6 +14,18 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+  <connectionStrings>
+    <!-- Using SQLLOCALDB server, via .mdf file
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data
+Source=(LocalDb)\.\SHARED_LOCAL_DB;Initial Catalog=Vidly.Models.MyDBContext;Integrated
+Security=SSPI;AttachDBFilename=\\Mac\_FIVEFISHDATA.local\Dev.Websites\Vidly\Vidly\App_Data\Vidly.Models.MyDBContext.mdf" />
+    -->
+
+    <!-- Using SQL Server -->
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="server=(local);database=Vidly;uid=vidlyuser;password=vidlypwd;" />
+  </connectionStrings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -66,11 +78,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
